# nextcamp

./: .env  .gitignore  .scalafmt.conf  Cargo.toml  build.sbt  config.toml  pyproject.toml
.bsp/: sbt.json
.cargo/: config.toml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/middleware/: mod.rs
api/src/routes/: auth.rs  campaign.rs  contacts.rs  dashboard.rs  mod.rs  user.rs
api/src/www/: mod.rs
bot/: Cargo.toml
clients/desktop/: .gitignore  Cargo.toml
clients/desktop/src/: main.rs
clients/desktop/v0.1-experimental/: index.html  other.html
clients/desktop/v0.1-experimental/_app/: version.json
clients/desktop/v0.1-experimental/_app/immutable/assets/: 0.CggpdwGy.css  _layout.DkCAtxlQ.css
clients/desktop/v0.1-experimental/_app/immutable/chunks/: disclose-version.V1TfQA5t.js  entry.BwF6ejZo.js  legacy.C-fr0Ow8.js  runtime.BsuTc0I5.js  store.5ZsGGrfA.js
clients/desktop/v0.1-experimental/_app/immutable/entry/: app.C-S_6umf.js  start.DMtbFbRY.js
clients/desktop/v0.1-experimental/_app/immutable/nodes/: 0.LRlH2y4N.js  1.yAdgLDdC.js  2.Be9-xZyL.js  3.KzZHbZpP.js
clients/desktop/view/: bun.lockb  package.json  svelte.config.js  tailwind.config.ts
clients/desktop/view/src/: app.css
clients/desktop/view/src/routes/: +page.svelte
clients/desktop/view/src/routes/other/: +page.svelte
database/: test.py
database/src/main/scala/: Main.scala
nextcamp/: Cargo.toml
nextcamp-api/: Cargo.toml
nextcamp-api/src/: lib.rs  main.rs
nextcamp-api/src/www/route/: mod.rs
nextcamp-client/: Cargo.toml  bun.lockb  package.json
nextcamp-client/src/: lib.rs  main.rs
nextcamp-client/src-tauri/: Cargo.toml  tauri.conf.json
nextcamp-client/src-tauri/src/: main.rs
nextcamp-client/src/config/: mod.rs
nextcamp-client/src/www/: mod.rs
nextcamp-client/src/www/route/: mod.rs
nextcamp/src/: lib.rs  main.rs
nextcamp/src/user/: mod.rs
src/: lib.rs
src/api/: mod.rs
src/api/middleware/: mod.rs
src/api/route/: mod.rs  smtp.rs  user.rs
src/nextcamp/user/: mod.rs
src/nextcamp/user/api/: mod.rs
src/smtp/: mod.rs
src/user/: mod.rs
supabase/: config.toml
supabase/migrations/: 20241122134054___initial.sql  20241122135458_alter_contact.sql  20241122165618___initial.sql  20241122165707___initial__user.sql
wp-client/desktop/: Cargo.toml  bun.lockb  package.json  tailwind.config.ts  tauri.conf.json
wp-client/desktop/src/: app.html
wp-client/desktop/src-tauri/: Cargo.toml
wp-client/desktop/src-tauri/src/: main.rs
wp-client/desktop/src/routes/: +page.svelte
wp-client/desktop/view/: bun.lockb  package.json
wp-client/desktop/view/src/: app.pcss
wp-client/desktop/view/src/routes/: +page.svelte
wp-database/src/main/scala/: Main.scala
www/nextcamp-client/: bun.lockb  package.json  svelte.config.js  tailwind.config.ts
www/nextcamp-client/src/: app.css
www/nextcamp-client/src/lib/component/: dropdown.svelte  index.ts  tandc.svelte  user.svelte  wrapper.svelte
www/nextcamp-client/src/lib/icon/: dropdown.svelte
www/nextcamp-client/src/routes/: +layout.svelte  +page.svelte
wwwroot/: bun.lockb  package.json  turbo.json
wwwroot/apps/client/: package.json  tailwind.config.ts
wwwroot/apps/nextcamp/: package.json  tailwind.config.ts
wwwroot/apps/nextcamp/src/routes/: +page.svelte
