[package]
edition = "2021"
name = "nextcamp"
version = "0.1.0"


[dependencies]
async-trait = "0.1.82"
axum = {version = "0.7.5", features = ["macros"]}
hyper = {version = "1.5.0", features = ["full"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
tokio = {version = "1.40.0", features = ["full"]}
toml = "0.8.19"
tower = {version = "0.5.1", features = ["full"]}
tower-http = "0.5.2"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Extenstion
axum-plus = {git = "https://github.com/0x28west-dev/axum-plus", rev = "9247c31a9f487453d91dcf8146af03346a51c095"}
std-plus = {git = "https://github.com/0x28west-dev/std-plus", rev = "99a17bbb1670065574eb8346f8ddfcac2dc69450"}

[dev-dependencies]
