[workspace]
resolver = "2"
members = [
    "nextcamp-api",
    "nextcamp-bot",
    "nextcamp-client/src-tauri"
]

[workspace.dependencies]
async-trait = "0.1.82"
axum = "0.7.5"
serde = "1.0.210"
serde_json = "1.0.132"
tokio = "1.40.0"
tower = "0.5.1"
tower-http = "0.6.1"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0"
