[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true, features = ["multipart", "macros", "query"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true }

# # Extenstion
axum-plus = {git = "https://github.com/0x28west-dev/axum-plus", rev = "9247c31a9f487453d91dcf8146af03346a51c095"}

# Core Library
nextcamp = { path = "../nextcamp" }