[package]
edition = "2021"
name = "api"
version = "0.1.0"

[dependencies]
async-trait = {workspace = true}
axum = {workspace = true, features = ["multipart", "macros", "query"]}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tower = {workspace = true, features = ["full"]}
tower-http = {workspace = true}
tower-layer = {workspace = true}
tower-service = {workspace = true}
tracing = {workspace = true, features = ["log"]}
tracing-subscriber = {workspace = true}
validator = {version = "0.19", features = ["derive"]}

# # Extenstion
axum-plus = {git = "https://github.com/0x28west-dev/axum-plus", rev = "a3b5a1c36a23beb082b7a4d19d1acfce7a6153e8"}

# Core Library
nextcamp = {path = "../nextcamp"}



[dev-dependencies]
anyhow.workspace = true