[package]
name = "nextcamp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
hyper = {version = "1.5.0", features = ["full"]}
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Extensions
axum-plus = { git = "https://github.com/0x28west-dev/axum-plus", rev = "9247c31a9f487453d91dcf8146af03346a51c095" }
std-plus = { git = "https://github.com/0x28west-dev/std-plus", rev = "99a17bbb1670065574eb8346f8ddfcac2dc69450" }
